# SalesTechForce

SalesTechForce/: CMakeLists.txt  main.cpp
SalesTechForce/lib/: functions.cpp  functions.h
